# comp0034-cw1

./: LICENSE  README.md  pyproject.toml  requirements.txt  tools techniques.md
coursewiork1/: data_prep.py
coursework1/: coursework1.md  dataprep.md  product.md  toolstechniques.md
coursework2/: coursework2.md  employee.py  test_employee.py
src/: comp0034-coursework1.md
src/coursework1/: __init__.py  coursework1.md  model.py  routes.py  schema.py  schemas
src/coursework1/data/: dataset.xlsx  dataset_prepared.csv  dataset_prepared.xlsx
src/coursework2/: coursework2.md
src/tests/: conftest.py  test_routes.py
tests/: test_employee.py
