[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "comp0035-cw"
version = "0.0.1"
authors = [
  { name="Sarah Sanders", email="sarah.sanders@ucl.ac.uk" },
]
description = "Template repository for COMP0035 coursework 1 and coursework 2"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Education",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pandas",
    "pytest",
]
include = ['src']
